--- a/src/main/resources/templates/views/commons/common.html
+++ b/src/main/resources/templates/views/commons/common.html
@@ -4,8 +4,8 @@
 	<div id="header-box">
 		<div class="header-top">
 			<ul>
-				<li><a href="#">회원가입</a></li>
-				<li><a href="#">로그인</a></li>
+				<li><a href="/signup">회원가입</a></li>
+				<li><a href="/login">로그인</a></li>
 				<li><a href="#">주문배송</a></li>
 				<li><a href="#">고객센터</a></li>
 			</ul>
@@ -34,9 +34,9 @@
 			</div>
 			<div class="header-middle-right">
 				<ul>
-					<li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
-					<li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
-					<li><a href="#"><i class="fa-regular fa-user"></i></a></li>
+					<li><a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
+					<li><a href="/wish"><i class="fa-regular fa-heart"></i></a></li>
+					<li><a href="/mypage/orders"><i class="fa-regular fa-user"></i></a></li>
 				</ul>
 			</div>
 		</div>
@@ -92,10 +92,10 @@
 		<div>
 			<h3>소셜 미디어</h3>
 			<div class="social-icons">
-				<a href="#"><i class="fab fa-facebook-f"></i></a> <a href="#"><i
-					class="fab fa-twitter"></i></a> <a href="#"><i
-					class="fab fa-instagram"></i></a> <a href="#"><i
-					class="fab fa-youtube"></i></a>
+				<a href="#"><i class="fab fa-facebook-f"></i></a> 
+				<a href="#"><i class="fab fa-twitter"></i></a> 
+				<a href="#"><i class="fab fa-instagram"></i></a> 
+				<a href="#"><i class="fab fa-youtube"></i></a>
 			</div>
 		</div>
 	</div>
