--- a/src/main/resources/templates/views/commons/layout.html
+++ b/src/main/resources/templates/views/commons/layout.html
@@ -2,19 +2,45 @@
 <html xmlns:th="http://www.thymeleaf.org" th:fragment="layout(pHead,pMain)">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="/css/common/header.css"/>
-	<link rel="stylesheet" href="/css/common/footer.css"/>
-	<link rel="stylesheet" href="/css/mainContent/main_content.css"/>
+	<link rel="stylesheet" href="/css/header.css"/>
+	<link rel="stylesheet" href="/css/footer.css"/>
+	<link rel="stylesheet" href="/css/bot.css"/>
+	<link rel="stylesheet" href="/css/main_content.css"/>
 	<script src="https://kit.fontawesome.com/bcc4a0fa81.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-	<script src="/js/mainContent/bannerCartMore.js"></script>
-	<script src="/js/mainContent/menuButton.js"></script>
+	<script src="/js/bannerCartMore.js"></script>
 	<!--각 html 마다 적용-->
 	<th:block th:insert="${pHead}"/>
 </head>
 <body>
 	<header th:replace="~{views/commons/common :: top}"></header>
 	<main th:replace="${pMain}">메인태그가 치환됩니다.</main>
+	<!-- ///////// -->
+	<!--  챗봇 영역  -->
+	<!-- ///////// -->
+	<footer>
+		    <!-- 챗봇 이미지 -->
+		    <img id="chat-icon" src="/img/botlogo.png" alt="Chatbot Icon" />
+		
+		    <!-- 챗봇 창 -->
+		    <div id="bot-container">
+		        <button id="close-button">X</button> <!-- 닫기 버튼 -->
+		        <div id="chat-content"></div>
+		        <div id="input-container">
+		            <input type="text" id="question" placeholder="Enter your question" />
+		            <button id="send-button">Send</button>
+		        </div>
+		    </div>
+		
+		    <!-- JavaScript 코드 추가 -->
+		    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+		    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.1/sockjs.min.js"></script>
+		    <script src="/js/bot/bot.js"></script>
+		
+	</footer>
+	<!-- ///////// -->
+	<!-- ///////// -->
+	<!-- ///////// -->
 	<header th:replace="~{views/commons/common :: bottom}"></header>
 </body>
 </html>
