feat:login,admin update

--- a/src/main/resources/templates/views/login/signup.html
+++ b/src/main/resources/templates/views/login/signup.html
@@ -11,12 +11,13 @@
 
     <div class="main-signup">
 
-        <header>
-            <!--NAVER LOGO-->
-            <div class="logo">
-                	<img src="/img/Untitled_removebg_preview.png" class="image">
-            </div>
-        </header>
+		<header>
+		 <a href="/">
+			<div class="logo">
+			<img src="/img/Untitled_removebg_preview.png" class="image">			
+			</div>
+			</a>
+		</header>
 
         <!--회원가입 부분-->
         <section class="signup-wrap">
