--- a/src/main/resources/templates/views/login/login.html
+++ b/src/main/resources/templates/views/login/login.html
@@ -13,11 +13,16 @@
 	<div class="main">
 	
 		<header>
+		 <a href="/">
 			<div class="logo">
-			<img src="/img/Untitled_removebg_preview.png" class="image">
+			<img src="/img/Untitled_removebg_preview.png" class="image">			
 			</div>
+			</a>
 		</header>
-
+		        <section class="login-buttons-wrap">
+            <button class="login-btn" onclick="window.location.href='/login'">회원 로그인</button>
+            <button class="login-btn admin-login-btn" onclick="window.location.href='/admin-login'">판매자 로그인</button>
+        </section>
 		<!--로그인 부분-->
 		<section class="login-wrap">
 
@@ -53,6 +58,11 @@
             <img src="/img/naver.png" alt="Naver Login">
             <a href="https://nid.naver.com/nidlogin.login" target="_blank" title="네이버 아이디로 로그인">네이버 아이디로 로그인</a>
         </div>
+        <div class="google-login-ko">
+    <img src="/img/google.png" alt="Google Login">
+    <a href="https://accounts.google.com/o/oauth2/auth" target="_blank" title="구글 아이디로 로그인">구글 아이디로 로그인</a>
+</div>
+        
     </div>
 </div>
 
