--- a/src/main/resources/templates/views/mypage/sidebar.html
+++ b/src/main/resources/templates/views/mypage/sidebar.html
@@ -11,14 +11,14 @@
     </div>
     <ul class="menu">
         <li class="menu-main">마이페이지</li>
-        <li><a href="#">쿠폰</a></li>
-        <li><a href="#">나의 취향</a></li>
-        <li><a href="#">회원 정보</a></li>
-        <li><a href="#">회원 탈퇴</a></li>
-        <li><a href="#">1:1 문의 내역</a></li>
+        <li><a href="/mypage/coupons">쿠폰</a></li>
+        <li><a href="/mypage/favorites">나의 취향</a></li>
+        <li><a href="/mypage/account">회원 정보</a></li>
+        <li><a href="/mypage/account/delete">회원 탈퇴</a></li>
+        <li><a href="/mypage/questions">1:1 문의 내역</a></li>
         <li class="menu-main">주문내역</li>
-        <li><a href="#">주문/배송목록</a></li>
-        <li><a href="#">환불/교환 목록</a></li>
-        <li><a href="#">취소 목록</a></li>
+        <li><a href="/mypage/orders">주문/배송목록</a></li>
+        <li><a href="/mypage/exchange">환불/교환 목록</a></li>
+        <li><a href="/mypage/cancel">취소 목록</a></li>
     </ul>
 </div>
