--- a/src/main/resources/templates/views/commons/common.html
+++ b/src/main/resources/templates/views/commons/common.html
@@ -6,8 +6,8 @@
 			<ul>
 				<li><a href="/signup">회원가입</a></li>
 				<li><a href="/login">로그인</a></li>
-				<li><a href="#">주문배송</a></li>
-				<li><a href="#">고객센터</a></li>
+				<li><a href="/mypage/orders">주문배송</a></li>
+				<li><a href="/mypage/questions">고객센터</a></li>
 			</ul>
 		</div>
 		<div class="containers">
@@ -35,7 +35,7 @@
 			<div class="header-middle-right">
 				<ul>
 					<li><a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
-					<li><a href="/wish"><i class="fa-regular fa-heart"></i></a></li>
+					<li><a href="/wishs"><i class="fa-regular fa-heart"></i></a></li>
 					<li><a href="/mypage/orders"><i class="fa-regular fa-user"></i></a></li>
 				</ul>
 			</div>
@@ -86,7 +86,7 @@
 				<li><a href="#">자주 묻는 질문</a></li>
 				<li><a href="#">배송 정보</a></li>
 				<li><a href="#">반품 정책</a></li>
-				<li><a href="#">문의하기</a></li>
+				<li><a href="/mypage/questions">문의하기</a></li>
 			</ul>
 		</div>
 		<div>
