--- a/src/main/resources/templates/views/commons/sample.html
+++ b/src/main/resources/templates/views/commons/sample.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" 
-th:replace="~{views/commons/layout::layout(~{::main}, ~{::head})}">
-<head></head>
+th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
+<head>
+
+</head>
 <main>
 	<h1>샘플</h1>
 	<p>메인페이지 작업 하실 분 쓰세요</p>
