--- a/src/main/resources/templates/views/mypage/order.html
+++ b/src/main/resources/templates/views/mypage/order.html
@@ -76,6 +76,30 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
                     </tbody>
                 </table>
             </div>
+            <div>
+            	<section class="notice-section">
+		            <!-- <p class="no-orders">해당 기간에 주문한 상품이 없습니다.</p> -->
+		
+		            <div class="notice-box">
+		                <h2>유의사항</h2>
+		                <ul>
+		                    <li>배송조회는 택배사로 상품전달 후 조회 가능합니다.</li>
+		                    <li>현재 카드결제만 가능하며 추후 무통장결제가 추가될 예정입니다.</li>
+		                    <li>주문한 상품이 품절될 경우 해당 상품은 자동 취소 신청되며, 해당 카드사 정책에 따라 환불됩니다.</li>
+		                </ul>
+		            </div>
+		
+		            <div class="notice-box">
+		                <h2>카드결제(간편결제, 법인카드 포함) 취소 안내</h2>
+		                <ul>
+		                    <li>카드결제 취소 기간 안내</li>
+		                    <li>전체취소: 당일 취소/환불 처리</li>
+		                    <li>부분취소: 영업일 기준 3~5일 소요(당일 취소 포함)</li>
+		                    <li>카드사 정책에 따라 주문당일 부분취소할 경우 당일 취소 및 환불 불가합니다.</li>
+		                </ul>
+		            </div>
+		        </section>
+            </div>
         </div>
     </div>
 </main>
