--- a/src/main/resources/static/css/admin/index.css
+++ b/src/main/resources/static/css/admin/index.css
@@ -21,7 +21,7 @@ html,body {
 }
 
 .grid-item {
-    background-color: #f0f0f0;
+    background-color: #ffffff;
     border: 1px solid #ccc;
     padding: 20px;
     text-align: center;
