--- a/src/main/resources/static/css/admin/sidebar.css
+++ b/src/main/resources/static/css/admin/sidebar.css
@@ -1,13 +1,14 @@
 @charset "UTF-8";
 
 body {
+	background-color:#f0f0f0;
 	margin: 0;
 	font-family: Arial, sans-serif;
 }
 
 .sidebar {
 	width: 250px;
-	background-color: #f1f1f1;
+	background-color: #ffffff;
 	height: 100vh;
 }
 
@@ -62,6 +63,10 @@ body {
 .sidebar ul li i {
 	margin-right: 10px;
 }
+.sidebar ul li a {
+	color: #000;
+}
+
 
 .content {
 	padding: 20px;
