--- a/src/main/resources/templates/views/admin/sidebar.html
+++ b/src/main/resources/templates/views/admin/sidebar.html
@@ -7,12 +7,12 @@
 	</div>
 	<hr class="user-info-line">
 	<ul>
-		<li>상품 관리</li>
-		<li>주문 관리</li>
-		<li>취소/교환/환불 관리</li>
-		<li>리뷰 관리</li>
-		<li>프로모션 및 쿠폰</li>
-		<li>클라우드</li>
-		<li>문의관리</li>
+		<li><a href="/admin/inventory">상품 관리</a></li>
+		<li><a href="#">주문 관리</a></li>
+		<li><a href="#">취소/교환/환불 관리</a></li>
+		<li><a href="#">리뷰 관리</a></li>
+		<li><a href="#">프로모션 및 쿠폰</a></li>
+		<li><a href="#">클라우드</a></li>
+		<li><a href="#">문의관리</a></li>
 	</ul>
 </nav>
