--- a/src/main/resources/templates/views/commons/common.html
+++ b/src/main/resources/templates/views/commons/common.html
@@ -60,7 +60,7 @@
 				</div>
 			</div>
 			<ul>
-				<li>베스트</li>
+				<li><a href="/bookList">베스트</a></li>
 				<li>신상품</li>
 				<li>이벤트</li>
 			</ul>
