--- a/src/main/resources/templates/views/index/bookSlider.html
+++ b/src/main/resources/templates/views/index/bookSlider.html
@@ -3,7 +3,7 @@
 	
 		<!-- 도서 추천 슬라이더  -->
 		<div class="book-slider-container">
-			<a href="/bookList"><h1>클릭 연관 추천 Pick</h1></a>
+			<a href="/bookList"><h1>베스트 Pick</h1></a>
 			<div class="book-slider">
 	            <div class="book-slide">
 	                <span class="book-item">
