--- a/src/main/resources/static/css/common/header.css
+++ b/src/main/resources/static/css/common/header.css
@@ -1,8 +1,8 @@
 body {
 	margin: 0 auto;
-	width: 1200px;
 	height: 100%;
 }
+header, main {width: 1200px;margin: 0 auto;}
 
 /*헤더 - 상  */
 .header-top {
@@ -98,8 +98,8 @@ body {
     display: flex;
     align-items: center;
     padding: 10px;
-    border-top: 2px solid #000;
-    border-bottom: 2px solid #000;
+    border-top: 1px solid #ededf7;
+    border-bottom: 1px solid #ededf7;
 }
 
 .header-bottom ul {
