--- a/src/main/resources/templates/views/commons/layout.html
+++ b/src/main/resources/templates/views/commons/layout.html
@@ -6,11 +6,13 @@
 	<link rel="stylesheet" href="/css/common/footer.css"/>
 	<link rel="stylesheet" href="/css/mainContent/main_content.css"/>
 	<link rel="stylesheet" href="/css/mainContent/bookList.css"/>
+	<link rel="stylesheet" href="/css/mainContent/detail.css"/>
 	<script src="https://kit.fontawesome.com/bcc4a0fa81.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script src="/js/mainContent/bannerCartMore.js"></script>
 	<script src="/js/mainContent/menuButton.js"></script>
 	<script src="/js/mainContent/bookList.js"></script>
+	<script src="/js/mainContent/detail.js"></script>
 	<link rel="stylesheet" href="/css/bot.css"/>
 	<!--각 html 마다 적용-->
 	<th:block th:insert="${pHead}"/>
