--- a/src/main/resources/templates/views/index/bookList.html
+++ b/src/main/resources/templates/views/index/bookList.html
@@ -41,17 +41,29 @@
 								<input type="checkbox" class="bookCheckbox">
 							</div>
 							<div class="bookImg">
-								<img alt="Book" src="img/book1.jpg">
-								<span><a href="#">새창보기</a></span><span><a href="#">미리보기</a></span>
+								<img alt="Book" src="img/book3.jpg"> <span><a
+									href="/detail">새창보기</a></span> <span class="chang"><a href="/detail">미리보기</a></span>
+							</div>
+							<div class="bookContent">
+								<h3><a href="/detail">당신이 누군가를 죽였다</a></h3>
+								<h4><a href="/detail">히가시노 게이고</a></h4>
+								<h5>17,820원</h5>
+								<h6>"미스터리란 어떤 소설인가? 라는 질문을 들었을 때 이런 소설이다, 라고 대답할 수 있는
+									작품입니다."_히가시노 게이고 일본 최고의 베스트셀러 작가 히가시노 게이고의 최신 장편소설</h6>
 							</div>
 							<div>
-								<div>당신이 누군가를 죽였다</div>
-								<div>히가시노 게이고</div>
-								<div>2000원</div>
-								<div>설명</div>
+								<p>당일배송</p>
+								<h5>
+									<strong>오늘(8/6,화)도착</strong>
+								</h5>
 							</div>
-							<div>당일배송</div>
-							<div>장바구니/바로구매</div>
+							<div class="button-container">
+								<button class="heart-button">
+									<i class="far fa-heart"></i>
+								</button>
+								<button class="cart-button">장바구니</button>
+								<button class="buy-button">바로구매</button>
+							</div>
 						</li>
 					</ol>
 				</div>
