--- a/src/main/resources/templates/views/commons/layout.html
+++ b/src/main/resources/templates/views/commons/layout.html
@@ -11,7 +11,19 @@
 	<script src="/js/mainContent/bannerCartMore.js"></script>
 	<script src="/js/mainContent/menuButton.js"></script>
 	<script src="/js/mainContent/bookList.js"></script>
-	<link rel="stylesheet" href="/css/bot.css"/>
+    <script src="/js/mainContent/detail.js"></script>
+	<script src="/js/mainContent/review.js"></script>
+	
+	<!-- 챗봇  -->
+    <script src="/js/chatbot/bot.js"></script>
+	<!-- //// -->
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.1/sockjs.min.js"></script>
+	
+	<link rel="stylesheet" href="/css/chatbot/bot.css"/>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"/>
+    
 	<!--각 html 마다 적용-->
 	<th:block th:insert="${pHead}"/>
 </head>
@@ -23,22 +35,20 @@
 	<!-- ///////// -->
 	<footer>
 		    <!-- 챗봇 이미지 -->
-		    <img id="chat-icon" src="/img/botlogo.png" alt="Chatbot Icon" />
+		    <img id="chat-icon" src="/img/bot/botlogo.png" alt="Chatbot Icon" />
 		
 		    <!-- 챗봇 창 -->
 		    <div id="bot-container">
-		        <button id="close-button">X</button> <!-- 닫기 버튼 -->
+		    	<div id="bot-top">
+			        <button id="close-button"><i class="ri-close-line"></i></button> <!-- 닫기 버튼 -->
+		    	</div>
 		        <div id="chat-content"></div>
 		        <div id="input-container">
-		            <input type="text" id="question" placeholder="Enter your question" />
-		            <button id="send-button">Send</button>
+		            <input type="text" id="question" placeholder="질문을 입력하세요." />
+		            <button id="send-button"><i class="ri-send-plane-line"></i></button>
 		        </div>
 		    </div>
-		
-		    <!-- JavaScript 코드 추가 -->
-		    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-		    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.1/sockjs.min.js"></script>
-		    <script src="/js/bot/bot.js"></script>
+			
 		
 	</footer>
 	<!-- ///////// -->
