--- a/src/main/resources/static/css/login/login.css
+++ b/src/main/resources/static/css/login/login.css
@@ -1,378 +1,451 @@
-body{
-    background-color: #f5f6f7;
+body {
+	background-color: #f5f6f7;
 }
-select{
-    width:85px;
-    height:25px;
-    outline: none;
-    background: #f5f6f7;
-    border: 1px solid #999;
+
+select {
+	width: 85px;
+	height: 25px;
+	outline: none;
+	background: #f5f6f7;
+	border: 1px solid #999;
 }
-a{
-    color: black;
-    text-decoration: none;
+
+a {
+	color: black;
+	text-decoration: none;
 }
-.main{
-    text-align: center;
+
+.main {
+	text-align: center;
 	margin-top: 20px;
 }
-input{
-    cursor: pointer
+
+input {
+	cursor: pointer
 }
 
 /*언어설정*/
-.select-lang{
-    text-align: right;
-    padding-right: 10px;
+.select-lang {
+	text-align: right;
+	padding-right: 10px;
 }
 
 /*input 아이디박스*/
-.login-id-wrap{
-
-    margin: 0px 10px 8px 10px;
-    padding: 10px;
-    border: solid 1px #dadada;
-    background: #fff;
+.login-id-wrap {
+	margin: 0px 10px 8px 10px;
+	padding: 10px;
+	border: solid 1px #dadada;
+	background: #fff;
 }
 /*input 아이디 form*/
-#input-id{
-    border: none;
-    outline:none;
-    width:100%;
+#input-id {
+	border: none;
+	outline: none;
+	width: 100%;
 }
 /*input 패스워드박스*/
-.login-pw-wrap{
-
-    margin: 0px 10px 8px 10px;
-    padding: 10px;
-    border: solid 1px #dadada;
-    background: #fff;
+.login-pw-wrap {
+	margin: 0px 10px 8px 10px;
+	padding: 10px;
+	border: solid 1px #dadada;
+	background: #fff;
 }
 /*input 패스워드 form*/
-#input-pw{
-    border: none;
-    outline:none;
-    width:100%;
+#input-pw {
+	border: none;
+	outline: none;
+	width: 100%;
 }
-/*로그인버튼박스*/
-.login-btn-wrap{
-    height: 52px;
-    line-height: 55px;
-    margin: 0px 10px 8px 10px;
-    border: solid 1px rgba(0,0,0,.1);
+/* 로그인 버튼 스타일 */
+.login-buttons-wrap {
+    display: flex;
+    justify-content: space-between;
+    width: 440px; /* 전체 너비를 440px로 설정 */
+    margin: 0 auto 20px auto; /* 가운데 정렬 */
+}
+
+.login-btn {
+    flex: 1; /* 버튼을 동일한 너비로 */
     background-color: #FF9040;
-    color: #fff;
+    color: white;
+    padding: 10px 0; /* 테두리 크기 줄임 */
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
     cursor: pointer;
+    text-align: center;
+    margin: 0 5px; /* 버튼 간격 조정 */
+}
+
+.admin-login-btn {
+    background-color: #6c757d;
+}
+
+.login-btn:hover {
+    background-color: #E67922;
+}
+
+.admin-login-btn:hover {
+    background-color: #5a6268;
+}
+
+
+/*로그인버튼박스*/
+.login-btn-wrap {
+	height: 52px;
+	line-height: 55px;
+	margin: 0px 10px 8px 10px;
+	border: solid 1px rgba(0, 0, 0, .1);
+	background-color: #FF9040;
+	color: #fff;
+	cursor: pointer;
 }
 /*로그인버튼*/
-#login-btn{
-    width:100px;
-    background-color: #FF9040;
-    border: none;
-    color:#fff;
-    font-size: 18px;
-    outline:none;
-    cursor: pointer;
+#login-btn {
+	width: 100px;
+	background-color: #FF9040;
+	border: none;
+	color: #fff;
+	font-size: 18px;
+	outline: none;
+	cursor: pointer;
 }
 /*로그인 아래 박스*/
-.under-login{
-    height: 50px;
-    border-bottom: 1px solid gainsboro;
-    margin: 0px 10px 35px 10px;
+.under-login {
+	height: 50px;
+	border-bottom: 1px solid gainsboro;
+	margin: 0px 10px 35px 10px;
 }
-
 
 /*간편한 로그인 구역*/
-#easy-login-wrap{
-    height: 90px;
-    margin: 0px 10px 35px 10px;
+#easy-login-wrap {
+	height: 90px;
+	margin: 0px 10px 35px 10px;
 }
 /*간편한 로그인 텍스트*/
-.easy-login{
-    font-size: 20px;
-    font-weight: 500;
+.easy-login {
+	font-size: 20px;
+	font-weight: 500;
 }
 
-
-
 /* styles.css */
-
 .easy-login-box, .easy-login-box-en {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
 }
 
 .easy-login-box div, .easy-login-box-en div {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+	display: flex;
+	align-items: center;
+	gap: 10px;
 }
-
 
 /*간편한 로그인 박스*/
 .easy-login-box {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin: 20px 0;
+	display: flex;
+	justify-content: center;
+	gap: 20px;
+	margin: 20px 0;
 }
 
 /*카카오 로그인 스타일*/
 .kakao-login-ko {
-    background-color: #FEE500;
-    padding: 10px 20px;
-    border-radius: 5px;
-    width: 400px;
+	background-color: #FEE500;
+	padding: 10px 20px;
+	border-radius: 5px;
+	width: 400px;
+	justify-content: center;
+	align-items: center;
 }
 
 .kakao-login-ko img {
-    width: 30px;
-    height: 30px;
+	width: 30px;
+	height: 30px;
 }
 
 .kakao-login-ko a {
-    color: #3C1E1E;
-    font-weight: bold;
-    font-size: 14px;
-    text-decoration: none;
+	color: #3C1E1E;
+	font-weight: bold;
+	font-size: 14px;
+	text-decoration: none;
 }
 
 .kakao-login-ko:hover {
-    background-color: #E4C200;
+	background-color: #E4C200;
 }
 
 /*네이버 로그인 스타일*/
 .naver-login-ko {
-    background-color: #03C75A; 
-    padding: 10px 20px;
-    border-radius: 5px;
-    width: 400px;
+	background-color: #03C75A;
+	padding: 10px 20px;
+	border-radius: 5px;
+	width: 400px;
+	justify-content: center;
+	align-items: center;
 }
 
 .naver-login-ko img {
+	width: 30px;
+	height: 30px;
+}
+
+.naver-login-ko a {
+	color: #FFFFFF; /* 흰색 텍스트 */
+	font-weight: bold;
+	font-size: 14px;
+	text-decoration: none;
+}
+
+.naver-login-ko:hover {
+	background-color: #029B48; /* 호버 시 어두운 녹색 */
+}
+
+/* 구글 로그인 스타일 */
+.google-login-ko {
+    background-color: #FFFFFF; /* 흰색 */
+    padding: 10px 20px;
+    border-radius: 5px;
+    width: 400px;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #ddd; /* 흰색 배경에 경계선 추가 (선택 사항) */
+}
+
+.google-login-ko img {
     width: 30px;
     height: 30px;
 }
 
-.naver-login-ko a {
-    color: #FFFFFF; /* 흰색 텍스트 */
+.google-login-ko a {
+    color: #4285F4; /* 구글 블루 색상 (링크 텍스트) */
     font-weight: bold;
     font-size: 14px;
     text-decoration: none;
 }
 
-.naver-login-ko:hover {
-    background-color: #029B48; /* 호버 시 어두운 녹색 */
+.google-login-ko:hover {
+    background-color: #f1f1f1; /* 호버 시 밝은 회색 */
 }
-
-
 
 /*찾기 및 회원가입*/
-.find-signup-wrap{
-    height: 100px;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin-top:100px;
-    
-    
+.find-signup-wrap {
+	height: 100px;
+	grid-template-columns: 1fr 1fr 1fr;
+	margin-top: 200px;
 }
+
+find-signup-wrap-admin{
+	height: 100px;
+	grid-template-columns: 1fr 1fr 1fr;
+	margin-top: 90px;
+}
+
+.find-signup-wrap-admin a {
+	color: rgb(150, 150, 150);
+	text-decoration: none;
+	font-weight: 500;
+}
+
+.find-signup-wrap-admin span {
+	color: rgb(150, 150, 150);
+	font-weight: 500;
+}
+
 /*찾기 및 회원가입 글자 희미하게 바꾸기*/
-.find-signup-wrap a{
-    color: rgb(150, 150, 150);
-    text-decoration: none;
-    font-weight: 500;
+.find-signup-wrap a {
+	color: rgb(150, 150, 150);
+	text-decoration: none;
+	font-weight: 500;
 }
-.find-signup-wrap span{
-    color: rgb(150, 150, 150);
-    font-weight: 500;
+
+.find-signup-wrap span {
+	color: rgb(150, 150, 150);
+	font-weight: 500;
 }
 /*아이디 찾기*/
-.find-id{
-    margin: 3px;
-    font-size: 14px;
-    padding-right: 10px; 
-    border-right: 1px solid gainsboro;
+.find-id {
+	margin: 3px;
+	font-size: 14px;
+	padding-right: 10px;
+	border-right: 1px solid gainsboro;
 }
 
 /*비밀번호 찾기*/
-.find-pw{
-    margin: 3px;
-    font-size: 14px;
-    padding-right: 10px; 
-    border-right: 1px solid gainsboro;
+.find-pw {
+	margin: 3px;
+	font-size: 14px;
+	padding-right: 10px;
+	border-right: 1px solid gainsboro;
 }
 /*회원가입*/
-.sign-up{
-    margin: 3px;
-    font-size: 14px;
+.sign-up {
+	margin: 3px;
+	font-size: 14px;
 }
-
-
 
 /*가로 800px 이상일때*/
-@media(min-width : 800px)
-{
-    .main{
-        width: 460px;
-        margin: auto;
-    }
+@media ( min-width : 800px) {
+	.main {
+		width: 460px;
+		margin: auto;
+	}
 
+	/*로고설정*/
+	.image {
+		margin-top: 40px;
+		height: 90px;
+		padding: 20px;
+		margin-bottom: 40px;
+	}
 
-/*로고설정*/
-.image{
-    margin-top: 40px;
-    height: 90px;
-    padding: 20px;
-    margin-bottom: 40px;
-}
-
-
-
-/*회원가입 부분*/
-.main-signup{
-    text-align: center;
-    width: 460px;
-    margin: auto;
-}
-h3{
-    margin:19px 0px 8px;
-    text-align: left;
-    font-size: 14px;
-}
-.signup-input{
-    display:flex;
-    padding: 10px;
-    border: solid 1px #dadada;
-    background: #fff;
-    cursor: pointer;
-}
-.signup-input-c{
-    display:flex;
-    padding: 10px;
-    border: solid 1px #dadada;
-    background: #f5f6f7;
-    cursor: pointer;
-}
-.signup-input-c input{
-    background: #f5f6f7;
-}
-#signup-id, #signup-pw, #signup-pww{
-    height: 29px;
-    border: none;
-    outline:none;
-    width:100%;
-}
-.signup-at{
-    color: rgb(150, 150, 150);
-    font-size: 15px;
-    font-family: Dotum,'돋움',Helvetica,sans-serif;
-    margin-top: 8px;
-}
-.pw-lock{
-    /* content: ''; */
-    /* display: inline-block; */
-    top: 50%;
-    right: 13px;
-    width: 24px;
-    height: 24px;
-    margin-top: 5px;
-    background-image: url(https://static.nid.naver.com/images/ui/join/m_icon_pw_step.png);
-    background-size: 125px 75px;
-    cursor: pointer;
-}
-.pww-lock{
-    /* content: ''; */
-    /* display: inline-block; */
-    top: 50%;
-    right: 13px;
-    width: 24px;
-    height: 24px;
-    margin-top: 5px;
-    background-image: url(https://static.nid.naver.com/images/ui/join/m_icon_pw_step.png);
-    background-size: 125px 75px;
-    cursor: pointer;
-}
-
-.signup-input-birth{
-    display: block;
-    position: relative;
-    width: 100%;
-    height: 51px;
-    border: solid 1px #dadada;
-    padding: 10px;
-    background: #fff;
-    box-sizing: border-box;
-}
-#signup-birth-yy, #signup-birth-mm, #signup-birth-dd{
-    width: 113px;
-    height: 29px;
-    border: none;
-    outline:none;
-}
-#signup-name, #signup-gender, #signup-email, #signup-country, #signup-phone, #signup-cnum{
-    width:100%;
-    height: 29px;
-    border: none;
-    outline:none;
-}
-#signup-gender{
-    background-color: white;
-}
-#signup-country{
-    background-color: white;
-}
-#signup-birth-mm{
-    background-color: white;
-}
-/*본인 확인 이메일*/
-.choice{
-    display: flex;
-}
-.choice span{
-    margin-top: 20px;
-    color: rgb(150, 150, 150);
-    font-size: 13px;
-    font-family: Dotum,'돋움',Helvetica,sans-serif;
-}
-/*회원가입버튼박스*/
-.signup-btn-wrap{
-    height: 52px;
-    line-height: 55px;
-    margin: 10px 0px 50px 0px;
-    border: solid 1px rgba(0,0,0,.1);
-    background-color: #FF9040;
-    color: #fff;
-    cursor: pointer;
-}
-/*회원가입버튼*/
-#signup-btn{
-    width:100px;
-    background-color: #FF9040;
-    border: none;
-    color:#fff;
-    font-size: 18px;
-    outline:none;
-    cursor: pointer;
-}
-/*인증번호버튼박스*/
-.cnum-btn-wrap{
-    height: 52px;
-    line-height: 55px;
-    margin: 10px 0px 0px 10px;
-    border: solid 1px rgba(0,0,0,.1);
-    background-color: #FF9040;
-    color: #fff;
-    cursor: pointer;
-}
-/*인증번호버튼*/
-#cnum-btn{
-    width:115px;
-    background-color: #FF9040;
-    border: none;
-    color:#fff;
-    font-size: 15px;
-    outline:none;
-    cursor: pointer;
-}
+	/*회원가입 부분*/
+	.main-signup {
+		text-align: center;
+		width: 460px;
+		margin: auto;
+	}
+	h3 {
+		margin: 19px 0px 8px;
+		text-align: left;
+		font-size: 14px;
+	}
+	.signup-input {
+		display: flex;
+		padding: 10px;
+		border: solid 1px #dadada;
+		background: #fff;
+		cursor: pointer;
+	}
+	.signup-input-c {
+		display: flex;
+		padding: 10px;
+		border: solid 1px #dadada;
+		background: #f5f6f7;
+		cursor: pointer;
+	}
+	.signup-input-c input {
+		background: #f5f6f7;
+	}
+	#signup-id, #signup-pw, #signup-pww {
+		height: 29px;
+		border: none;
+		outline: none;
+		width: 100%;
+	}
+	.signup-at {
+		color: rgb(150, 150, 150);
+		font-size: 15px;
+		font-family: Dotum, '돋움', Helvetica, sans-serif;
+		margin-top: 8px;
+	}
+	.pw-lock {
+		/* content: ''; */
+		/* display: inline-block; */
+		top: 50%;
+		right: 13px;
+		width: 24px;
+		height: 24px;
+		margin-top: 5px;
+		background-image:
+			url(https://static.nid.naver.com/images/ui/join/m_icon_pw_step.png);
+		background-size: 125px 75px;
+		cursor: pointer;
+	}
+	.pww-lock {
+		/* content: ''; */
+		/* display: inline-block; */
+		top: 50%;
+		right: 13px;
+		width: 24px;
+		height: 24px;
+		margin-top: 5px;
+		background-image:
+			url(https://static.nid.naver.com/images/ui/join/m_icon_pw_step.png);
+		background-size: 125px 75px;
+		cursor: pointer;
+	}
+	.signup-input-birth {
+		display: block;
+		position: relative;
+		width: 100%;
+		height: 51px;
+		border: solid 1px #dadada;
+		padding: 10px;
+		background: #fff;
+		box-sizing: border-box;
+	}
+	#signup-birth-yy, #signup-birth-mm, #signup-birth-dd {
+		width: 113px;
+		height: 29px;
+		border: none;
+		outline: none;
+	}
+	#signup-name, #signup-gender, #signup-email, #signup-country,
+		#signup-phone, #signup-cnum {
+		width: 100%;
+		height: 29px;
+		border: none;
+		outline: none;
+	}
+	#signup-gender {
+		background-color: white;
+	}
+	#signup-country {
+		background-color: white;
+	}
+	#signup-birth-mm {
+		background-color: white;
+	}
+	/*본인 확인 이메일*/
+	.choice {
+		display: flex;
+	}
+	.choice span {
+		margin-top: 20px;
+		color: rgb(150, 150, 150);
+		font-size: 13px;
+		font-family: Dotum, '돋움', Helvetica, sans-serif;
+	}
+	/*회원가입버튼박스*/
+	.signup-btn-wrap {
+		height: 52px;
+		line-height: 55px;
+		margin: 10px 0px 50px 0px;
+		border: solid 1px rgba(0, 0, 0, .1);
+		background-color: #FF9040;
+		color: #fff;
+		cursor: pointer;
+	}
+	/*회원가입버튼*/
+	#signup-btn {
+		width: 100px;
+		background-color: #FF9040;
+		border: none;
+		color: #fff;
+		font-size: 18px;
+		outline: none;
+		cursor: pointer;
+	}
+	/*인증번호버튼박스*/
+	.cnum-btn-wrap {
+		height: 52px;
+		line-height: 55px;
+		margin: 10px 0px 0px 10px;
+		border: solid 1px rgba(0, 0, 0, .1);
+		background-color: #FF9040;
+		color: #fff;
+		cursor: pointer;
+	}
+	/*인증번호버튼*/
+	#cnum-btn {
+		width: 115px;
+		background-color: #FF9040;
+		border: none;
+		color: #fff;
+		font-size: 15px;
+		outline: none;
+		cursor: pointer;
+	}
 }
