feat: mypage layout, question

--- a/src/main/resources/templates/views/cart/cart-list.html
+++ b/src/main/resources/templates/views/cart/cart-list.html
@@ -5,7 +5,7 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 	<link rel="stylesheet" href="/css/cart/cart-list.css">
 </head>
 <main>
-	<div class="container">
+	<div>
         <h1>장바구니</h1>
         <div class="progress-bar">
             <div class="circle active">
@@ -34,7 +34,7 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
                 <tr>
                 	<td><input type="checkbox"></td>
                     <td class="product-info">
-                        <img src="book1.jpg" class="book-cover-img">
+                        <img src="/img/book-cover.png" class="book-cover-img">
                         <div class="book-info">
                             <p>해리포터와 마법사의 돌 1</p>
                             <p>J.K 롤링 저 / 강동혁 역</p>
