--- a/src/main/resources/templates/views/commons/common.html
+++ b/src/main/resources/templates/views/commons/common.html
@@ -11,25 +11,25 @@
 			</ul>
 		</div>
 		<div class="containers">
-			<div>
+			<div class="flex a-center">
 				<a href="/"><img src="/img/Untitled_removebg_preview.png" class="logo"></a>
-			</div>
-			<div class="search-container">
-				<div class="search-tull">
-					<div class="section">
-						<select title="검색유형선택">
-							<option>통합검색</option>
-							<option>베스트셀러</option>
-							<option>교보문고</option>
-							<option>이벤트</option>
-						</select>
+				<div class="search-container">
+					<div class="search-tull">
+						<div class="section">
+							<select title="검색유형선택">
+								<option>통합검색</option>
+								<option>베스트셀러</option>
+								<option>교보문고</option>
+								<option>이벤트</option>
+							</select>
+						</div>
 					</div>
-				</div>
-				<div>
-					<input title="통합검색어 입력" placeholder="왜 세계는 10대의 SNS를 금지하나">
-				</div>
-				<div>
-					<i class="fa-solid fa-magnifying-glass"></i>
+					<div>
+						<input title="통합검색어 입력" placeholder="왜 세계는 10대의 SNS를 금지하나">
+					</div>
+					<div>
+						<i class="fa-solid fa-magnifying-glass"></i>
+					</div>
 				</div>
 			</div>
 			<div class="header-middle-right">
@@ -70,7 +70,7 @@
 <!-- 여기까지 헤더 영역 -->
 
 <footer th:fragment="bottom" class="footer">
-	<div class="container">
+	<div class="bottom-container">
 		<div>
 			<h3>회사 정보</h3>
 			<ul>
