--- a/src/main/resources/templates/views/mypage/sidebar.html
+++ b/src/main/resources/templates/views/mypage/sidebar.html
@@ -4,8 +4,8 @@
         <div class="profile-info">
             <div><b>이유진님</b></div>
             <div>
-             <span>찜 0 </span>
-             <span> 내 취향 0</span>
+	            <span>찜 <b>0 </b> </span>
+	            <span> 내 취향 <b>0</b></span>
             </div>
         </div>
     </div>
