--- a/src/main/resources/static/css/common/footer.css
+++ b/src/main/resources/static/css/common/footer.css
@@ -1,28 +1,22 @@
-body {
-	font-family: Arial, sans-serif;
-}
-
-.flex{display: flex;}
-.space-between{justify-content: space-between;}
-.center{justify-content: center; align-items: center;}
+@import url("/css/common/reset.css");
 
 .footer {
-	background-color: #d4d4d4;
-	color: #fff;
+	background-color: var(--very-light-grey);
+	color: var(--dark-grey);
 	padding: 20px 0;
 	text-align: center;
 }
 
-.footer .container {
+.footer .bottom-container {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	max-width: 1200px;
 	margin: 0 auto;
 	padding: 0 20px;
+	max-width: 1200px;
 }
 
-.footer .container div {
+.footer .bottom-container div {
 	flex: 1;
 	margin: 10px;
 }
@@ -42,7 +36,7 @@ body {
 }
 
 .footer ul li a {
-	color: #fff;
+	color: var(--dark-grey);
 	text-decoration: none;
 }
 
@@ -56,13 +50,13 @@ body {
 }
 
 .footer .social-icons a {
-	color: #fff;
+	color: var(--dark-grey);
 	margin: 0 10px;
 	font-size: 20px;
 }
 
 .footer .social-icons a:hover {
-	color: #ff9040;
+	color: var(--main-orange);
 }
 
 .footer .copyright {
