--- a/src/main/resources/static/css/common/header.css
+++ b/src/main/resources/static/css/common/header.css
@@ -2,7 +2,10 @@ body {
 	margin: 0 auto;
 	height: 100%;
 }
-header, main {width: 1200px;margin: 0 auto;}
+header, main {
+	width: 1200px;
+	margin: 0 auto;
+}
 
 /*헤더 - 상  */
 .header-top {
@@ -22,31 +25,32 @@ header, main {width: 1200px;margin: 0 auto;}
 }
 
 .header-top ul li a {
-	text-decoration: none;
-	color: #333;
+	color: var(--black);
 	font-size: 12px;
+	font-weight: 500;
 }
+
 /*헤더 - 중  */
 .containers {
-	margin-bottom:20px;
+	margin-bottom: 20px;
 	display: flex;
-	align-items: end;
+	align-items: center;
 	justify-content: space-between;
 }
 .logo{
-	height: 104px;
-	width: 191px;
+	height: 70px;
 }
 .search-container {
 	display: flex;
 	align-items: center;
-	border: 1px solid #ff9040;
+	border: 1.5px solid var(--main-orange);
 	border-radius: 25px; /* 타원형 모양을 위해 border-radius를 크게 설정 */
 	padding: 5px 10px;
 	width: 550px;
 	height: 40px;
-	margin: 0 20px 0 50px;
-	background-color: #fff;
+	margin: 0 30px;
+	margin-top : 10px;
+	background-color: white;
 }
 
 .search-tull .section select {
@@ -70,36 +74,37 @@ header, main {width: 1200px;margin: 0 auto;}
 
 .search-container i {
 	cursor: pointer;
-	margin-left: 30px;
+	margin-left: 40px;
+	margin-top: 3px;
 	color: #ff9040;
-	font-size: 30px;
+	font-size: 22px;
 }
 
 .header-middle-right ul {
 	list-style: none;
 	display: flex;
 	margin: 0;
-	padding: 0;
+	margin-top: 10px;
 }
 
 .header-middle-right ul li {
-	margin-left: 20px;
-	width: 50px;
-	height: 50px;
+	padding: 15px;
 }
 
 .header-middle-right ul li a {
-	text-decoration: none;
 	color: #333;
-	font-size: 40px;
 }
+.header-middle-right > ul > li > a > i{
+	font-size: 35px;
+}
+
 /*헤더 - 하  */
 .header-bottom {
     display: flex;
     align-items: center;
     padding: 10px;
-    border-top: 1px solid #ededf7;
-    border-bottom: 1px solid #ededf7;
+    border-top: 1px solid var(--grey);
+    border-bottom: 1px solid var(--grey);
 }
 
 .header-bottom ul {
