--- a/src/main/resources/static/css/common/reset.css
+++ b/src/main/resources/static/css/common/reset.css
@@ -1,29 +1,34 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	box-sizing:border-box;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+/* 색상 */
+:root{
+	--black : #333333;
+	--brown : #7D3E08;
+	--dark-orange : #E0700E;
+	--main-orange : #FF9040;
+	--light-orange : #F49E51;
+	--dark-grey : #7f7f7f;
+	--dark-orange : #E0700E;
+	--grey : #D2D2D2;
+	--light-grey : #E9E9E9;
+	--very-light-grey : #f9f9f9;
+}
+
+.flex{display: flex;}
+.column{flex-direction: column;}
+.j-center{justify-content: center;}
+.a-center{align-items: center;}
+.between{justify-content: space-between;}
+
+a, a:visited, a:active, a:hover {
+    color: inherit;
 }
 
 body {
 	line-height: 1.6;
+	font-family: "Noto Sans KR", sans-serif !important;
+	color: var(--black);
 }
 ol, ul {
 	list-style: none;
@@ -39,4 +44,8 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+button, input  {
+	line-height: 1.6;
+	font-family: "Noto Sans KR", sans-serif !important;
 }
