--- a/src/main/resources/static/css/mainContent/detail.css
+++ b/src/main/resources/static/css/mainContent/detail.css
@@ -1,7 +1,7 @@
 .container {
     max-width: 1000px;
     margin: 0 auto;
-    font-family: Arial, sans-serif;
+    /* font-family: Arial, sans-serif; */
 }
 
 .breadcrumb {
