--- a/src/main/resources/static/css/mypage/account-delete.css
+++ b/src/main/resources/static/css/mypage/account-delete.css
@@ -1,16 +1,3 @@
-.main-content {
-    flex: 1;
-    background-color: #fff;
-    padding: 20px;
-}
-
-.container-main {
-    margin: auto;
-    background-color: white;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
 .head {
     display: flex;
     justify-content: space-between;
@@ -76,9 +63,8 @@
 }
 
 .auth-button {
-    background-color: #2196F3;
-    color: white;
-    border: none;
+	background-color: white;
+    border: 1px solid #d9d9d9;
     padding: 10px 20px;
     cursor: pointer;
     margin: 10px 0;
@@ -92,7 +78,8 @@
 
 .form-group label {
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-top: 15px;
+    padding: 5px;
 }
 
 .form-group input[type="text"],
@@ -105,7 +92,7 @@
 }
 
 .delete-button {
-    background-color: #ff0000;
+    background-color: #FF9040;
     color: white;
     border: none;
     padding: 15px 20px;
