--- a/src/main/resources/static/css/mypage/account.css
+++ b/src/main/resources/static/css/mypage/account.css
@@ -1,15 +1,3 @@
-.main-content {
-    flex: 1;
-    background-color: #fff;
-    padding: 20px;
-}
-.container-main {
-    margin: auto;
-    background-color: white;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
 .head {
     display: flex;
     justify-content: space-between;
@@ -28,9 +16,9 @@
 }
 
 .head .logout {
-    background-color: #333;
-    color: white;
-    border: none;
+    border: 1px solid var(--grey);
+    background-color: white;
+    color: var(--black);
     padding: 10px 20px;
     cursor: pointer;
 }
@@ -51,7 +39,7 @@
 }
 
 .update-button {
-    background-color: #4CAF50;
+    background-color: var(--brown);
     color: white;
     border: none;
     padding: 10px 20px;
@@ -77,15 +65,21 @@
     margin-right: 10px;
 }
 
-.info-form .change-password,
-.info-form .find-postalcode,
-.info-form .edit-phone,
-.info-form .edit-email {
-    background-color: #2196F3;
-    color: white;
-    border: none;
+.change-password, .find-postalcode,
+.edit-phone, .edit-email {
+    border: 1px solid var(--grey);
+    color: var(--black);
+    background-color: white;
     padding: 10px 20px;
     cursor: pointer;
+}
+
+.change-userinfo{
+	background-color: var(--main-orange);
+	color: white;
+	width: 100%;
+	height: 50px;
+	border:0;
 }
 
 .info-form .postalcode {
