--- a/src/main/resources/static/css/mypage/order.css
+++ b/src/main/resources/static/css/mypage/order.css
@@ -1,10 +1,3 @@
-.main-content {
-	flex: 1;
-	background-color: #fff;
-	padding: 20px;
-	margin-left: 20px;
-}
-
 .main-content h2 {
 	margin-top: 0;
 }
@@ -30,7 +23,7 @@
 	right: 10px;
 	background-color: #333;
 	color: #fff;
-	padding: 3px 7px;
+	padding: 2px 8px;
 	border-radius: 50%;
 	font-size: 12px;
 }
@@ -107,24 +100,17 @@
 	cursor: pointer;
 }
 
-.order-actions .cancel {
-	background-color: #f44336;
-	color: #fff;
-}
-
-.order-actions .check {
-	background-color: #4CAF50;
-	color: #fff;
-}
-
+.order-actions .check,
 .order-actions .review {
-	background-color: #2196F3;
+	background-color: var(--main-orange);
 	color: #fff;
 }
 
-.order-actions .delete {
-	background-color: #9E9E9E;
-	color: #fff;
+.order-actions .delete,
+.order-actions .cancel {
+	border: 1px solid var(--grey);
+	background-color: white;
+	color: var(--black);
 }
 
 table {
