--- a/src/main/resources/static/css/mypage/sidebar.css
+++ b/src/main/resources/static/css/mypage/sidebar.css
@@ -1,16 +1,13 @@
-.container {
-	display: flex;
-}
-
 .sidebar {
 	width: 250px;
-	background-color: #f1f1f1;
 	padding: 20px;
 }
 
 .profile-section {
 	text-align: center;
 	margin-bottom: 20px;
+	background-color: var(--light-grey);
+	padding: 10px;
 }
 
 .profile-pic {
@@ -31,16 +28,16 @@
 }
 
 .menu {
-	list-style-type: none;
-	padding: 0;
+	padding: 5px;
+	/* border: 1.5px solid var(--grey); */
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .menu li {
-	margin: 10px 0;
+	margin: 10px;
 }
 
 .menu-main {
-	padding: 10px;
 	font-size: 20px;
 	font-weight: bold;
 }
@@ -50,10 +47,22 @@
 	color: #333;
 	display: block;
 	padding: 10px;
-	border-radius: 5px;
-	background-color: #e9e9e9;
+	/* background-color: #e9e9e9; */
 }
 
 .menu a:hover {
 	background-color: #ccc;
+}
+
+.main-content {
+    flex: 1;
+    background-color: #fff;
+    padding: 20px;
+}
+
+.container-main {
+    margin: auto;
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
