--- a/src/main/resources/templates/views/mypage/account.html
+++ b/src/main/resources/templates/views/mypage/account.html
@@ -6,7 +6,7 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 	<link rel="stylesheet" href="/css/mypage/account.css">
 </head>
 <main>
-	<div class="container">
+	<div class="flex">
         <th:block  th:insert="~{views/mypage/sidebar}"/>
         <div class="main-content">
             <div class="container-main">
@@ -88,7 +88,7 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 		                </div>
 		                
 		                <div class="flex-center">
-		                	<button class="change-password">회원정보 수정</button>
+		                	<button class="change-userinfo">회원정보 수정</button>
 		                </div>
 		            </form>
 		        </section>
