--- a/src/main/resources/templates/views/mypage/sample.html
+++ b/src/main/resources/templates/views/mypage/sample.html
@@ -5,7 +5,7 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 	<link rel="stylesheet" href="/css/mypage/sidebar.css">
 </head>
 <main>
-	<div class="container">
+	<div class="flex">
         <th:block  th:insert="~{views/mypage/sidebar}"/>
         <div class="main-content">
             
