--- a/src/main/resources/templates/views/admin/sidebar.html
+++ b/src/main/resources/templates/views/admin/sidebar.html
@@ -1,5 +1,5 @@
 <nav class="sidebar">
-	<img src="/">
+	<a  href="/admin"><img src="/img/Untitled_removebg_preview.png" class="logo"></a>
 	<div class="user-info">
 		<img>
 		<p>북북출판사</p>
