--- a/src/main/resources/static/css/admin/inventory.css
+++ b/src/main/resources/static/css/admin/inventory.css
@@ -5,30 +5,34 @@ body {
 	
 }
 
+
+
 .container {
 	width:100%;
-	background-color: #f0f0f0;
-	border-radius: 5px;
+	background-color: white;
 	padding: 20px;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-.container>div {
-	padding: 20px;
+	margin: 20px;
 }
 
-
-.sub-name {
-	padding: 20px;
-	font-size: 20px;
-	background-color: white;
+.container h2 {
+	padding: 20px
 }
 
 .search-box {
 	background-color: white;
-	border: 1px solid #888;
+	border: 0.5px solid #d9d9d9;
+	
+}
+
+.search-box, .inven-box {
+	margin: 20px;
 }
 
 .search-section, .filter-section {
+	margin: 20px;
+}
+.filter-section div {
 	margin-bottom: 20px;
 }
 
@@ -55,8 +59,9 @@ button {
 }
 
 .inven-box {
+	padding:20px;
 	background-color: white;
-	border: 1px solid #888;
+	border: 0.5px solid #d9d9d9;
 }
 
 table {
