--- a/src/main/resources/static/css/admin/sidebar.css
+++ b/src/main/resources/static/css/admin/sidebar.css
@@ -6,8 +6,12 @@ body {
 	font-family: Arial, sans-serif;
 }
 
+
+.logo{
+	height: 50px;
+}
 .sidebar {
-	width: 250px;
+	min-width: 250px;
 	background-color: #ffffff;
 	height: 100vh;
 }
@@ -60,11 +64,10 @@ body {
 	background-color: #ddd;
 }
 
-.sidebar ul li i {
-	margin-right: 10px;
-}
 .sidebar ul li a {
 	color: #000;
+	text-decoration: none;
+	padding: 10px;
 }
 
 
