feat: 오류  완료  :ㅂ

--- a/src/main/resources/templates/views/index/detail.html
+++ b/src/main/resources/templates/views/index/detail.html
@@ -57,5 +57,8 @@
 		</div>
 		<div th:replace="~{views/index/review.html}"></div>
 	</main>
+	<script src="/js/mainContent/review.js"></script>
+	<script src="/js/mainContent/bookList.js"></script>
+	<script src="/js/mainContent/detail.js"></script>
 </body>
 </html>
