--- a/src/main/resources/templates/views/login/admin.html
+++ b/src/main/resources/templates/views/login/admin.html
@@ -9,6 +9,8 @@
 <body>
     <div class="wrapper">
         <nav class="sidebar">
+        <img src="/img/logo7.png" style="width:80%;">
+        
             <h2>관리자 메뉴</h2>
             <ul>
                 <li><a href="/seller">상품 관리</a></li>
@@ -34,18 +36,18 @@
                         <th>이메일</th>
                         <th>전화번호</th>
                         <th>가입일</th>
-                        <th>수정,삭제</th>
+                        <th>상세정보</th>
                         <th>리뷰</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- 여기에 JavaScript로 동적으로 고객 데이터를 추가할 것입니다 -->
+                    
                 </tbody>
             </table>
             
-            
+            <script src="/js/login/admin.js"></script>
         </main>
     </div>
-    <script src="/js/login/admin.js"></script>
+
 </body>
 </html>
