--- a/src/main/resources/templates/views/login/review.html
+++ b/src/main/resources/templates/views/login/review.html
@@ -11,6 +11,7 @@
 <body>
     <div class="wrapper">
         <nav class="sidebar">
+        <img src="/img/logo7.png" style="width:80%;">
             <h2>관리자 메뉴</h2>
             <ul>
                 <li><a href="/seller">상품 관리</a></li>
