--- a/src/main/resources/static/css/admin/index.css
+++ b/src/main/resources/static/css/admin/index.css
@@ -4,6 +4,7 @@
 html,body {
 	height: 100%;
 	width:100%;
+	background-color: #f0f0f0;
 }
 
 .content{
@@ -18,12 +19,18 @@ html,body {
 	/* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
 	position:relative;
 	grid-gap: 20px;
+	
+	
 }
 
 .grid-item {
     background-color: #ffffff;
-    border: 1px solid #ccc;
+    border: 1px solid #e9e9e9;
     padding: 20px;
     text-align: center;
     overflow-y: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
