--- a/src/main/resources/static/css/admin/sidebar.css
+++ b/src/main/resources/static/css/admin/sidebar.css
@@ -1,41 +1,77 @@
 @charset "UTF-8";
 
 body {
-	background-color:#f0f0f0;
-	margin: 0;
-	font-family: Arial, sans-serif;
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    margin: 0;
+    padding: 0;
+    color: #333;
 }
-
 
 .logo{
-	height: 50px;
+	width: 80%;
 }
+
+.wrapper {
+    display: flex;
+    min-height: 100vh;
+}
+
 .sidebar {
-	min-width: 250px;
-	background-color: #ffffff;
-	height: 100vh;
+    width: 250px;
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+}
+
+.sidebar h2 {
+    margin-bottom: 20px;
+    font-size: 1.5em;
+}
+
+.sidebar ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.sidebar ul li {
+    margin-bottom: 10px;
+    
+}
+
+.menu {
+	font-weight: bold;
+}
+
+.sidebar ul li a {
+    color: #fff;
+    text-decoration: none;
+    display: block;
+    padding: 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.sidebar ul li a:hover, .sidebar ul li a.active {
+    background-color: #555;
+}
+
+.content {
+    flex: 1;
+    padding: 20px;
+    max-width: calc(100% - 250px); 
+    margin-left: auto; 
 }
 
 .user-info {
 	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	margin-left: 15px;
-}
-
-.user-info>img {
-	display: block;
-	border-radius: 50%;
-	width: 35px;
-	height: 35px;
-	background-color: #ddd;
 }
 
 .user-info p {
 	margin-right: 10px;
 	font-size: 18px;
 	font-weight: bold;
-	color: #333;
+	color: white;
 }
 
 .user-info>p:first-of-type {
@@ -47,30 +83,11 @@ body {
 	width: 90%;
 }
 
-.sidebar ul {
+
+.submenu {
+	border-radius: 5px;
+	background-color: #444;
+	display: none;
 	list-style: none;
-	padding: 0;
-}
-
-.sidebar ul li {
-	padding: 15px;
-	text-align: left;
-	font-size: 18px;
-	color: #333;
-	cursor: pointer;
-}
-
-.sidebar ul li:hover {
-	background-color: #ddd;
-}
-
-.sidebar ul li a {
-	color: #000;
-	text-decoration: none;
-	padding: 10px;
-}
-
-
-.content {
-	padding: 20px;
+	margin:20px;
 }
