--- a/src/main/resources/templates/views/admin/index.html
+++ b/src/main/resources/templates/views/admin/index.html
@@ -1,26 +1,102 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bookbook Dashboard</title>
-	<link rel ="stylesheet" href="/css/admin/sidebar.css">
-	<link rel ="stylesheet" href="/css/admin/index.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Bookbook Dashboard</title>
+	<link rel="stylesheet" href="/css/admin/sidebar.css">
+	<link rel="stylesheet" href="/css/admin/index.css">
+	<script src="/js/admin/sidebar.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
+	<script src="https://code.highcharts.com/highcharts.js"></script>
 </head>
+
 <body>
 	<div class="index">
 		<div style="display: flex;">
-		        <th:block th:insert="~{views/admin/sidebar}"/>
-		        <div class="content">
-		            <div class="grid-container">
-						<div class="grid-item"></div>
-						<div class="grid-item"></div>
-						<div class="grid-item"></div>
-						<div class="grid-item"></div>
+			<th:block th:insert="~{views/admin/sidebar}" />
+			<div class="content">
+				<div class="grid-container">
+					<div class="grid-item">
+						<div id="monthly-sales-chart" style="width: 680px; height: 420px;"></div>
 					</div>
-		        </div>
-		    </div>
+					<div class="grid-item">
+						<div id="weekly-sales-chart" style="width:680px; height: 420px;"></div>
+					</div>
+					<div class="grid-item"></div>
+					<div class="grid-item"></div>
+				</div>
+			</div>
+		</div>
 	</div>
-    
+
 </body>
+<script>
+	// 임시 데이터
+	var monthlySalesData = [
+		{period: 'January', sales: 120},
+		{period: 'February', sales: 150},
+		{period: 'March', sales: 180},
+		{period: 'April', sales: 200},
+		{period: 'May', sales: 220},
+		{period: 'June', sales: 170},
+		{period: 'July', sales: 210},
+		{period: 'August', sales: 190},
+		{period: 'September', sales: 230},
+		{period: 'October', sales: 240},
+		{period: 'November', sales: 260},
+		{period: 'December', sales: 300}
+	];
+
+	var weeklySalesData = [
+		{period: 'Week 1', sales: 30},
+		{period: 'Week 2', sales: 50},
+		{period: 'Week 3', sales: 45},
+		{period: 'Week 4', sales: 60}
+	];
+
+	// 월별 판매 차트
+	var monthlySalesChart = echarts.init(document.getElementById('monthly-sales-chart'));
+	var monthlySalesOption = {
+		title: {
+			text: '월별 판매량'
+		},
+		tooltip: {},
+		xAxis: {
+			type: 'category',
+			data: monthlySalesData.map(function (item) {return item.period;})
+		},
+		yAxis: {
+			type: 'value'
+		},
+		series: [{
+			type: 'bar',
+			data: monthlySalesData.map(function (item) {return item.sales;})
+		}]
+	};
+	monthlySalesChart.setOption(monthlySalesOption);
+
+	// 주간 판매 차트
+	var weeklySalesChart = echarts.init(document.getElementById('weekly-sales-chart'));
+	var weeklySalesOption = {
+		title: {
+			text: '주간 판매량'
+		},
+		tooltip: {},
+		xAxis: {
+			type: 'category',
+			data: weeklySalesData.map(function (item) {return item.period;})
+		},
+		yAxis: {
+			type: 'value'
+		},
+		series: [{
+			type: 'bar',
+			data: weeklySalesData.map(function (item) {return item.sales;})
+		}]
+	};
+	weeklySalesChart.setOption(weeklySalesOption);
+</script>
+
 </html>
