--- a/src/main/resources/templates/views/admin/sidebar.html
+++ b/src/main/resources/templates/views/admin/sidebar.html
@@ -1,18 +1,31 @@
-<nav class="sidebar">
-	<a  href="/admin"><img src="/img/Untitled_removebg_preview.png" class="logo"></a>
-	<div class="user-info">
-		<img>
-		<p>북북출판사</p>
-		<p>▼</p>
-	</div>
-	<hr class="user-info-line">
-	<ul>
-		<li><a href="/admin/inventory">상품 관리</a></li>
-		<li><a href="#">주문 관리</a></li>
-		<li><a href="#">취소/교환/환불 관리</a></li>
-		<li><a href="#">리뷰 관리</a></li>
-		<li><a href="#">프로모션 및 쿠폰</a></li>
-		<li><a href="#">클라우드</a></li>
-		<li><a href="#">문의관리</a></li>
-	</ul>
-</nav>
+<div class="wrapper">
+	<nav class="sidebar">
+		<a href="/admin"><img src="/img/logo7.png" class="logo"></a>
+		<div class="user-info">
+			<img>
+			<p>북북출판사</p>
+			<p>▼</p>
+		</div>
+		<hr class="user-info-line">
+		<ul>
+			<li>
+				<a href="#" class="menu">상품 관리</a>
+				<ul class="submenu">
+					<li><a href="/admin/inventory">상품목록</a></li>
+					<li><a href="/admin/inventory/add">상품등록</a></li>
+				</ul>
+			</li>
+			<li>
+				<a href="#" class="menu">주문 관리</a>
+				<ul class="submenu">
+					<li><a href="/admin/order">주문내역</a></li>
+					<li><a href="/admin/order/refund">취소/교환/환불</a></li>
+			</li>
+		</ul>
+		<li><a href="#" class="menu">리뷰 관리</a></li>
+		<li><a href="#" class="menu">프로모션 및 쿠폰</a></li>
+		<li><a href="#" class="menu">클라우드</a></li>
+		<li><a href="#" class="menu">문의관리</a></li>
+		</ul>
+	</nav>
+</div>
