--- a/src/main/resources/templates/views/commons/common.html
+++ b/src/main/resources/templates/views/commons/common.html
@@ -35,7 +35,7 @@
 			<div class="header-middle-right">
 				<ul>
 					<li><a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
-					<li><a href="/wishs"><i class="fa-regular fa-heart"></i></a></li>
+					<li><a href="/mypage/favorites"><i class="fa-regular fa-heart"></i></a></li>
 					<li><a href="/mypage/orders"><i class="fa-regular fa-user"></i></a></li>
 				</ul>
 			</div>
