--- a/src/main/resources/templates/views/mypage/account-delete.html
+++ b/src/main/resources/templates/views/mypage/account-delete.html
@@ -23,7 +23,7 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 		            <h1>회원탈퇴</h1>
 		            <div class="header-buttons">
 		                <button class="header-button">로그아웃</button>
-		                <button class="header-button">마이페이지</button>
+		                <button class="header-button">회원정보</button>
 		            </div>
 		        </div>
 		
