--- a/src/main/resources/static/css/mypage/account-delete.css
+++ b/src/main/resources/static/css/mypage/account-delete.css
@@ -3,9 +3,9 @@
 }
 
 .header-button {
-    background-color: #333;
-    color: white;
-    border: none;
+    border: 1px solid var(--grey);
+    color: var(--black);
+    background-color: white;
     padding: 10px 20px;
     cursor: pointer;
     margin-left: 10px;
