--- a/src/main/resources/templates/views/mypage/order.html
+++ b/src/main/resources/templates/views/mypage/order.html
@@ -9,97 +9,101 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 	<div class="flex">
         <th:block  th:insert="~{views/mypage/sidebar}"/>
         <div class="main-content">
-            <h1>주문/배송목록</h1>
-            <div class="nav-tabs">
-                <div>주문내역</div>
-                <div>준비중 <span>0</span></div>
-                <div>배송중 <span>0</span></div>
-                <div>배송완료 <span>0</span></div>
-                <div>취소 <span>0</span></div>
-                <div>교환/반품 <span>0</span></div>
-            </div>
-            <div class="search-bar">
-                <input type="text" placeholder="상품명/판매자명 입력">
-            </div>
-            <div class="order-list">
-                <div class="order-date">2024.08.04 주문</div>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>제품정보</th>
-                            <th>수량</th>
-                            <th>결제금액</th>
-                            <th>주문 현황</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <div style="display: flex; align-items: center;">
-                                    <img src="/img/book-cover.png" class="book-cover-img">
-                                    <div class="order-info">
-                                        <div>해리포터와 마법사의 돌 1</div>
-                                        <div>J.K 롤링 저 / 강동혁 역</div>
-                                    </div>
-                                </div>
-                            </td>
-                            <td>1개</td>
-                            <td>17,000원</td>
-                            <td>
-                                <div class="order-actions">
-                                	<div>상품 준비중</div>
-                                    <button class="check">배송 조회</button>
-                                    <button class="cancel">주문 취소</button>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <div style="display: flex; align-items: center;">
-                                    <img src="/img/book-cover.png" class="book-cover-img">
-                                    <div class="order-info">
-                                        <div>해리포터와 마법사의 돌 2</div>
-                                        <div>J.K 롤링 저 / 강동혁 역</div>
-                                    </div>
-                                </div>
-                            </td>
-                            <td>1개</td>
-                            <td>17,000원</td>
-                            <td>
-                                <div class="order-actions">
-                                	<div>구매 완료</div>
-                                    <button class="review">리뷰 작성</button>
-                                    <button class="delete">내역 삭제</button>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div>
-            	<section class="notice-section">
-		            <!-- <p class="no-orders">해당 기간에 주문한 상품이 없습니다.</p> -->
-		
-		            <div class="notice-box">
-		                <h2>유의사항</h2>
-		                <ul>
-		                    <li>배송조회는 택배사로 상품전달 후 조회 가능합니다.</li>
-		                    <li>현재 카드결제만 가능하며 추후 무통장결제가 추가될 예정입니다.</li>
-		                    <li>주문한 상품이 품절될 경우 해당 상품은 자동 취소 신청되며, 해당 카드사 정책에 따라 환불됩니다.</li>
-		                </ul>
-		            </div>
-		
-		            <div class="notice-box">
-		                <h2>카드결제(간편결제, 법인카드 포함) 취소 안내</h2>
-		                <ul>
-		                    <li>카드결제 취소 기간 안내</li>
-		                    <li>전체취소: 당일 취소/환불 처리</li>
-		                    <li>부분취소: 영업일 기준 3~5일 소요(당일 취소 포함)</li>
-		                    <li>카드사 정책에 따라 주문당일 부분취소할 경우 당일 취소 및 환불 불가합니다.</li>
-		                </ul>
-		            </div>
-		        </section>
-            </div>
+	        <div class="container-main">
+	        	<div class="head">
+	            	<h1>주문/배송목록</h1>
+	            </div>
+	            <div class="nav-tabs">
+	                <div>주문내역</div>
+	                <div>준비중 <span>0</span></div>
+	                <div>배송중 <span>0</span></div>
+	                <div>배송완료 <span>0</span></div>
+	                <div>취소 <span>0</span></div>
+	                <div>교환/환불 <span>0</span></div>
+	            </div>
+	            <div class="search-bar">
+	                <input type="text" placeholder="상품명/판매자명 입력">
+	            </div>
+	            <div class="order-list">
+	                <div class="order-date">2024.08.04 주문</div>
+	                <table>
+	                    <thead>
+	                        <tr>
+	                            <th>제품정보</th>
+	                            <th>수량</th>
+	                            <th>결제금액</th>
+	                            <th>주문 현황</th>
+	                        </tr>
+	                    </thead>
+	                    <tbody>
+	                        <tr>
+	                            <td>
+	                                <div style="display: flex; align-items: center;">
+	                                    <img src="/img/book-cover.png" class="book-cover-img">
+	                                    <div class="order-info">
+	                                        <div>해리포터와 마법사의 돌 1</div>
+	                                        <div>J.K 롤링 저 / 강동혁 역</div>
+	                                    </div>
+	                                </div>
+	                            </td>
+	                            <td>1개</td>
+	                            <td>17,000원</td>
+	                            <td>
+	                                <div class="order-actions">
+	                                	<div>상품 준비중</div>
+	                                    <button class="check">배송 조회</button>
+	                                    <button class="cancel">주문 취소</button>
+	                                </div>
+	                            </td>
+	                        </tr>
+	                        <tr>
+	                            <td>
+	                                <div style="display: flex; align-items: center;">
+	                                    <img src="/img/book-cover.png" class="book-cover-img">
+	                                    <div class="order-info">
+	                                        <div>해리포터와 마법사의 돌 2</div>
+	                                        <div>J.K 롤링 저 / 강동혁 역</div>
+	                                    </div>
+	                                </div>
+	                            </td>
+	                            <td>1개</td>
+	                            <td>17,000원</td>
+	                            <td>
+	                                <div class="order-actions">
+	                                	<div>구매 완료</div>
+	                                    <button class="review">리뷰 작성</button>
+	                                    <button class="delete">내역 삭제</button>
+	                                </div>
+	                            </td>
+	                        </tr>
+	                    </tbody>
+	                </table>
+	            </div>
+	            <div>
+	            	<section class="notice-section">
+			            <!-- <p class="no-orders">해당 기간에 주문한 상품이 없습니다.</p> -->
+			
+			            <div class="notice-box">
+			                <h2>유의사항</h2>
+			                <ul>
+			                    <li>배송조회는 택배사로 상품전달 후 조회 가능합니다.</li>
+			                    <li>현재 카드결제만 가능하며 추후 무통장결제가 추가될 예정입니다.</li>
+			                    <li>주문한 상품이 품절될 경우 해당 상품은 자동 취소 신청되며, 해당 카드사 정책에 따라 환불됩니다.</li>
+			                </ul>
+			            </div>
+			
+			            <div class="notice-box">
+			                <h2>카드결제(간편결제, 법인카드 포함) 취소 안내</h2>
+			                <ul>
+			                    <li>카드결제 취소 기간 안내</li>
+			                    <li>전체취소: 당일 취소/환불 처리</li>
+			                    <li>부분취소: 영업일 기준 3~5일 소요(당일 취소 포함)</li>
+			                    <li>카드사 정책에 따라 주문당일 부분취소할 경우 당일 취소 및 환불 불가합니다.</li>
+			                </ul>
+			            </div>
+			        </section>
+	            </div>
+	        </div>
         </div>
     </div>
 </main>
