--- a/src/main/resources/templates/views/mypage/question.html
+++ b/src/main/resources/templates/views/mypage/question.html
@@ -9,10 +9,10 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 	<div class="flex">
         <th:block  th:insert="~{views/mypage/sidebar}"/>
         <div class="main-content">
-            <div class="question-container">
+            <div class="container-main">
 		        <div class="head">
 		            <h1>1:1 문의내역</h1>
-		            <button class="btn">1:1 문의하기</button>
+		            <button class="head-btn">1:1 문의하기</button>
 		        </div>
 		        <div class="tabs">
 		            <button class="tab active" onclick="openTab(event, 'all')">전체</button>
