--- a/src/main/resources/templates/views/mypage/sidebar.html
+++ b/src/main/resources/templates/views/mypage/sidebar.html
@@ -4,21 +4,21 @@
         <div class="profile-info">
             <div><b>이유진님</b></div>
             <div>
-	            <span>찜 <b>0 </b> </span>
-	            <span> 내 취향 <b>0</b></span>
+	            <span class="wish">찜 <b>0 </b> </span>
+	            <span class="favorite-find"> 내 취향</span>
             </div>
         </div>
     </div>
     <ul class="menu">
         <li class="menu-main">마이페이지</li>
-        <li><a href="/mypage/coupons">쿠폰</a></li>
+        <li><a href="/mypage/coupons">쿠폰/적립금</a></li>
         <li><a href="/mypage/favorites">나의 취향</a></li>
         <li><a href="/mypage/account">회원 정보</a></li>
         <li><a href="/mypage/account/delete">회원 탈퇴</a></li>
         <li><a href="/mypage/questions">1:1 문의 내역</a></li>
         <li class="menu-main">주문내역</li>
         <li><a href="/mypage/orders">주문/배송목록</a></li>
-        <li><a href="/mypage/exchange">환불/교환 목록</a></li>
+        <li><a href="/mypage/exchange">교환/환불 목록</a></li>
         <li><a href="/mypage/cancel">취소 목록</a></li>
     </ul>
 </div>
