--- a/src/main/resources/templates/views/login/admin.html
+++ b/src/main/resources/templates/views/login/admin.html
@@ -1,27 +1,15 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>관리자 페이지</title>
+    <link rel="stylesheet" href="/css/login/admin-common.css">
     <link rel="stylesheet" href="/css/login/admin.css">
 </head>
 <body>
     <div class="wrapper">
-        <nav class="sidebar">
-        <img src="/img/logo7.png" style="width:80%;">
-        
-            <h2>관리자 메뉴</h2>
-            <ul>
-                <li><a href="/seller">상품 관리</a></li>
-                <li><a href="/admin1" class="active">고객 관리</a></li>
-                <li><a href="#">판매자 관리</a></li>
-                <li><a href="/refund">상품 관리</a></li>
-                <li><a href="/review">리뷰 관리</a></li>
-                <li><a href="#">프로모션 및 쿠폰</a></li>
-                <li><a href="#">클라우드(가이드)</a></li>
-            </ul>
-        </nav>
+		<div th:replace="~{/views/login/sidebaradmin(activeMenu='admin1')}"></div>
         <main class="content">
             <h1>고객 관리</h1>
             <div class="search-container">
@@ -41,11 +29,41 @@
                     </tr>
                 </thead>
                 <tbody>
-                    
-                </tbody>
+            <tr>
+                <td>1</td>
+                <td>홍길동</td>
+                <td>hong@example.com</td>
+                <td>010-1234-5678</td>
+                <td>2023-01-15</td>
+                <td>
+                      <a href="/admin/detail"><button class="action-button">정보</button></a>
+                </td>
+                <td>
+                    <a href="/review"><button class="review-button">작성 리뷰</button></a>
+                </td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>김유자</td>
+                <td>kim@example.com</td>
+                <td>010-2345-6789</td>
+                <td>2023-02-20</td>
+                <td>
+                     <a href="/admin1/detail"><button class="action-button">정보</button></a>
+                </td>
+                <td>
+                    <a href="/review"><button class="review-button">작성 리뷰</button></a>
+                </td>
+            </tr>
+        </tbody>
             </table>
-            
-            <script src="/js/login/admin.js"></script>
+    	<div class="pagination">
+    	        <a href="#"><</a>
+                <a href="#" class="active">1</a>
+                <a href="#">2</a>
+                <a href="#">3</a>
+                <a href="#">></a>
+            </div>
         </main>
     </div>
 
